--- a/index.html
+++ b/index.html
@@ -33,4 +33,5 @@ title: Home
 
 </div>
 
-<h2 align="center"><a href="/all">See all</a></h2>
+<h2 style="text-align: center; "><a href="/all">See all</a></h2>
+<p style="text-align: center; "><a href="/submit/">Submit a resource</a></p>
