--- a/submission.html
+++ b/submission.html
@@ -1,6 +1,11 @@
+---
+title: Submit a resource
+permalink: /submit/
+---
+
 <html>
 <head>
-<title>Submit a CC Resource | Creative Commons</title>
+<title>{{ page.title }} | Creative Commons</title>
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
